Aprimorada tipagem das variaveis

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./*"]
     },
-    "baseUrl": "src/app"
+    "baseUrl": "src/app/"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/**/*"],
   "exclude": ["node_modules"]
